--- a/index.html
+++ b/index.html
@@ -1,2 +1,22 @@
-<h1> Hello world</h1>
-<p>My name is Dani</p>
+<!doctype html>
+
+<htmL>
+
+    <head>
+        <meta charset="utf-8">
+
+        <title>Great travel deals from It's Time to Travel</title>
+
+    </head>
+
+
+    <body>
+
+        <h1> Hello world</h1>
+        <p>My name is Dani</p>
+        
+    </body>
+
+</htmL>
+
+
