--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
     <title>Great travel deals from It's Time to Travel</title>
 
+    <link rel="stylesheet" href="resources/css/normalize.css">
+
+    <link rel="stylesheet" href="resources/css/main.css">
+
+
 </head>
 
 
