--- a/index.html
+++ b/index.html
@@ -397,6 +397,12 @@
 
     </footer>
 
+    <script src="resources/js/css-var-polyfill.js"></script>
+
+
+
+    <script src="resources/js/scripts.js"></script>
+
 </body>
 
 </htmL>
