--- a/index.html
+++ b/index.html
@@ -22,18 +22,14 @@
     <header>
         <div class="layout-wide">
             <div class="logo-wrapper">
-
                 <a href="index.html">
-
                     <img src="resources/images/logo.svg" alt="Time to Travel Logo" class="logo">
-
                 </a>
 
             </div>
 
             <div class="site-title">
                 Time To Travel
-
             </div>
             <!-- .site title -->
 
@@ -41,6 +37,30 @@
 
     </header>
 
+    <div class="navigation">
+
+        <button class="nav-prompt">Open Navigation</button>
+        <nav class="layout-wide nav-inner" aria-expanded="false">   
+          <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="about.html">About Us</a>
+            </li>
+            <li>
+                <a href="media.html">Media</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+            <li>
+                <a href="elements.html">Elements</a>
+            </li>
+          </ul>
+        </nav>
+
+    </div>
     <!-- this is a comment -->
 
     <main>
