--- a/about.html
+++ b/about.html
@@ -65,7 +65,14 @@
 
     <main>
 
-
+            <section class="hero-module">
+                    <img src="resources/images/people-wide-1500.jpg" alt="People on a Beach">
+                    <div class="hero-content">
+                        <h1 class="layout-wide heading-main">
+                            About Us
+                        </h1>
+                    </div>
+            </section>
 
     </main>
 
