--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,14 @@
 
     <main>
 
-
+            <section class="hero-module">
+                    <img src="resources/images/thailand-wide-1500.jpg" alt="Kao Sok, Thailand">
+                    <div class="hero-content">
+                        <h1 class="layout-wide heading-main">
+                            Contact Us
+                        </h1>
+                    </div>
+            </section>
 
     </main>
 
