Image Gallery completed

--- a/about.html
+++ b/about.html
@@ -99,8 +99,7 @@
                     <p>Sally travelled the world for over a decade before starting Time To Travel. She specialises in both leisure and corporate travel, and her favourite place to holiday is Venice.</p>
                     <h3>Mike Miller</h3>
                     <p>Mike's passion for travel began over 20 years ago when he backpacked around Australia after leaving school.</p>
-                    <p>He specialises in outback adventures and is the only person in the office to have completed the Kokoda
-                        Track.</p>
+                    <p>He specialises in outback adventures and is the only person in the office to have completed the Kokoda Track.</p>
                     <h3>Josh Jones</h3>
                     <p>Josh is the connections guru in the office. He once flew around the world in 40 hours, just to prove that he could.</p>
                 </div>
