--- a/media.html
+++ b/media.html
@@ -11,6 +11,8 @@
 
     <link rel="stylesheet" href="resources/css/normalize.css">
 
+    <link rel="stylesheet" href="resources/css/simpleLightbox.min.css">
+
     <link rel="stylesheet" href="resources/css/main.css">
 
 
@@ -40,24 +42,24 @@
     <div class="navigation">
 
         <button class="nav-prompt">Open Navigation</button>
-        <nav class="layout-wide nav-inner" aria-expanded="false">   
-          <ul>
-            <li>
-                <a href="index.html">Home</a>
-            </li>
-            <li>
-                <a href="about.html">About Us</a>
-            </li>
-            <li>
-                <a href="media.html">Media</a>
-            </li>
-            <li>
-                <a href="contact.html">Contact</a>
-            </li>
-            <li>
-                <a href="elements.html">Elements</a>
-            </li>
-          </ul>
+        <nav class="layout-wide nav-inner" aria-expanded="false">
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="about.html">About Us</a>
+                </li>
+                <li>
+                    <a href="media.html">Media</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+                <li>
+                    <a href="elements.html">Elements</a>
+                </li>
+            </ul>
         </nav>
 
     </div>
@@ -65,14 +67,76 @@
 
     <main>
 
-            <section class="hero-module">
-                    <img src="resources/images/new-york-wide-1500.jpg" alt="New York">
-                    <div class="hero-content">
-                        <h1 class="layout-wide heading-main">
-                            Media Page
-                        </h1>
-                    </div>
-            </section>
+        <section class="hero-module">
+            <video muted autoplay loop src="resources/video/new-york.mp4">
+
+                Your browser does not support video.
+
+            </video>
+
+            <div class="hero-content">
+                <h1 class="layout-wide heading-main">
+                    Media Page
+                </h1>
+            </div>
+        </section>
+        <h2>Audio</h2>>
+        <audio controls src="resources/audio/bensound-happyrock.mp3"></audio>
+        </section>
+
+        <section class+ "layout-wide">
+            <h2>New York is lovely</h2>
+
+            <div class="image-gallery">
+                <ul>
+
+                    <li>
+                        <a href="resources/galleries/new-york-01.jpg">
+                            <img src="resources/galleries/new-york-01-thumb.jpg" alt="Statue of Liberty">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="resources/galleries/new-york-02.jpg">
+                            <img src="resources/galleries/new-york-02-thumb.jpg" alt="New York Harbor">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="resources/galleries/new-york-03.jpg">
+                            <img src="resources/galleries/new-york-03-thumb.jpg" alt="Triangle Building">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="resources/galleries/new-york-04.jpg">
+                            <img src="resources/galleries/new-york-04-thumb.jpg" alt="Empire State Building">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="resources/galleries/new-york-05.jpg">
+                            <img src="resources/galleries/new-york-05-thumb.jpg" alt="Times Square">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="resources/galleries/new-york-06.jpg">
+                            <img src="resources/galleries/new-york-06-thumb.jpg" alt="Bridge">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="resources/galleries/new-york-07.jpg">
+                            <img src="resources/galleries/new-york-07-thumb.jpg" alt="Skyscrapers">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="resources/galleries/new-york-08.jpg">
+                            <img src="resources/galleries/new-york-08-thumb.jpg" alt="Skyscrapers at Night">
+                        </a>
+                    </li>
+                </ul>
+
+
+
+            </div>
+
+        </section>
 
     </main>
 
@@ -137,7 +201,7 @@
 
     <script src="resources/js/jquery.js"></script>
 
-
+    <script src="resources/js/simpleLightbox.min.js"></script>
 
     <script src="resources/js/scripts.js"></script>
 
