--- a/contact.html
+++ b/contact.html
@@ -40,24 +40,24 @@
     <div class="navigation">
 
         <button class="nav-prompt">Open Navigation</button>
-        <nav class="layout-wide nav-inner" aria-expanded="false">   
-          <ul>
-            <li>
-                <a href="index.html">Home</a>
-            </li>
-            <li>
-                <a href="about.html">About Us</a>
-            </li>
-            <li>
-                <a href="media.html">Media</a>
-            </li>
-            <li>
-                <a href="contact.html">Contact</a>
-            </li>
-            <li>
-                <a href="elements.html">Elements</a>
-            </li>
-          </ul>
+        <nav class="layout-wide nav-inner" aria-expanded="false">
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="about.html">About Us</a>
+                </li>
+                <li>
+                    <a href="media.html">Media</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+                <li>
+                    <a href="elements.html">Elements</a>
+                </li>
+            </ul>
         </nav>
 
     </div>
@@ -65,14 +65,38 @@
 
     <main>
 
-            <section class="hero-module">
-                    <img src="resources/images/thailand-wide-1500.jpg" alt="Kao Sok, Thailand">
-                    <div class="hero-content">
-                        <h1 class="layout-wide heading-main">
-                            Contact Us
-                        </h1>
-                    </div>
-            </section>
+        <section class="hero-module">
+            <img src="resources/images/thailand-wide-1500.jpg" alt="Kao Sok, Thailand">
+            <div class="hero-content">
+                <h1 class="layout-wide heading-main">
+                    Contact Us
+                </h1>
+            </div>
+        </section>
+
+        <section class="layout-wide">
+            <h2>Come and say hi</h2>
+
+            <div class="content-area-grid">
+
+                <div class="content-block">
+                    <h3>Drop in and see us!</h3>
+                    <p>We're located at 321 Smith Street, SomewhereTown State Zip</p>
+                    <p>Send us an email to a
+                        <a href="mailto:email@email.com">email@email.com</a>
+                    </p>
+                    <p>Give us a call
+                        <a href="tel:123456789">123456789</a>
+                    </p>
+
+                </div>
+
+                <div class="content-block">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3255.467443481535!2d149.13511611487482!3d-35.31921208028026!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b164c5a3a9f82bd%3A0x6a58259af8fd024d!2sEast+Hotel!5e0!3m2!1sen!2sau!4v1532844116756"
+                        width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                </div>
+            </div>
+        </section>
 
     </main>
 
